Admin panel (database created)

--- a/Ap204_Pronia/Areas/ProniaAdmin/Views/Size/Index.cshtml
+++ b/Ap204_Pronia/Areas/ProniaAdmin/Views/Size/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="table-responsive pt-3">
-    <a style="color:white;font-size:20px" class="mb-3 btn btn-success">Create size</a>
+    <a asp-controller="Size" asp-action="create" style="color:white;font-size:20px" class="mb-3 btn btn-success">Create size</a>
     <table class="table table-dark">
         <thead>
             <tr>
