--- a/Ap204_Pronia/Areas/ProniaAdmin/Views/Color/Index.cshtml
+++ b/Ap204_Pronia/Areas/ProniaAdmin/Views/Color/Index.cshtml
@@ -1,10 +1,11 @@
-﻿
+﻿@using Ap204_Pronia.Models
+@model List<Color>
 @{
     ViewData["Title"] = "IndexColor";
 }
 
 <div class="table-responsive pt-3">
-    <a style="color:white;font-size:20px" class="mb-3 btn btn-success">Create Color</a>
+    <a style="color:white;font-size:20px" asp-controller="Color" asp-action="create" class="mb-3 btn btn-success">Create Color</a>
     <table class="table table-dark">
         <thead>
             <tr>
@@ -33,15 +34,15 @@
                     <td>
                         <div class="d-flex">
                             <div class="detail">
-                                <a asp-controller="Size" asp-action="Detail" asp-route-id="@color.Id" class="btn btn-primary"><i class="mdi mdi-details"></i></a>
+                                <a asp-controller="Color" asp-action="Detail" asp-route-id="@color.Id" class="btn btn-primary"><i class="mdi mdi-details"></i></a>
                             </div>
                             <div class="edit">
-                                <a asp-controller="Size" asp-action="Edit" asp-route-id="@color.Id" class="btn btn-warning">
+                                <a asp-controller="Color" asp-action="Edit" asp-route-id="@color.Id" class="btn btn-warning">
                                     <i class="mdi mdi-tooltip-edit"></i>
                                 </a>
                             </div>
                             <div class="delete">
-                                <a asp-controller="Size" asp-action="Delete" asp-route-id="@color.Id" class="btn btn-danger"> <i class="mdi mdi-delete-forever"></i></a>
+                                <a asp-controller="Color" asp-action="Delete" asp-route-id="@color.Id" class="btn btn-danger"> <i class="mdi mdi-delete-forever"></i></a>
                             </div>
                         </div>
                     </td>
