--- a/Ap204_Pronia/Areas/ProniaAdmin/Views/Shared/_Layout.cshtml
+++ b/Ap204_Pronia/Areas/ProniaAdmin/Views/Shared/_Layout.cshtml
@@ -204,6 +204,7 @@
                                 <li class="nav-item"> <a class="nav-link" asp-controller="Color" asp-action="Index">Color</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-controller="Category" asp-action="Index">Category</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-controller="Slider" asp-action="Index">Sliders</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Plant" asp-action="Index">Plants</a></li>
 
                             </ul>
                         </div>
@@ -277,6 +278,10 @@
     <!-- page-body-wrapper ends -->
     <!-- container-scroller -->
     <!-- plugins:js -->
+
+
+
+
     <script src="~/admin/vendors/base/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page-->
@@ -297,6 +302,7 @@
     <!-- End custom js for this page-->
 
     <script src="~/admin/js/jquery.cookie.js" type="text/javascript"></script>
+    @RenderSection("Scripts",required:false)
 </body>
 
 </html>
