--- a/Ap204_Pronia/Areas/ProniaAdmin/Views/Plant/Create.cshtml
+++ b/Ap204_Pronia/Areas/ProniaAdmin/Views/Plant/Create.cshtml
@@ -3,64 +3,72 @@
     ViewData["Title"] = "Create";
 }
 
-<div asp-validation-summary="ModelOnly" class=" alert alert-danger"></div>
+<div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
 <form method="post" enctype="multipart/form-data">
     <div>
-        <label class="mb-3">Plant  Name:</label><br />
+        <label class="mb-3">Plant name:</label><br />
         <input asp-for="Name" class="form-control border border-info" /><br />
         <span class="text-danger" asp-validation-for="Name"></span>
     </div>
     <div>
-        <label class="mb-3">Plant Price:</label><br />
-        <input asp-for="Price" class="form-control border border-info" /><br />
+        <label class="mb-3">Plant price:</label><br />
+        <input asp-for="Price" class="form-control  border border-info" /><br />
         <span class="text-danger" asp-validation-for="Price"></span>
     </div>
     <div>
         <label class="mb-3">Plant Description:</label><br />
-        <input asp-for="Description" class="form-control border border-info" /><br />
+        <input asp-for="Description" class="form-control  border border-info" /><br />
         <span class="text-danger" asp-validation-for="Description"></span>
     </div>
     <div>
-        <label class="mb-3">Plant SkuCode:</label><br />
-        <input asp-for="SKUCode" class="form-control border border-info" /><br />
+        <label class="mb-3">Plant SKUCode:</label><br />
+        <input asp-for="SKUCode" class="form-control  border border-info" /><br />
         <span class="text-danger" asp-validation-for="SKUCode"></span>
     </div>
     <div>
         <label class="mb-3">Plant Colors:</label><br />
-        <select class="form-select" asp-items="@(new SelectList(ViewBag.Colors,"Id","Name"))" asp-for="ColorId">
-        </select>
-        <span class="text-danger" asp-validation-for="SKUCode"></span>
+        <select class="form-control  border border-info" asp-for="ColorId" asp-items="@(new SelectList(ViewBag.Colors,"Id","Name"))"></select>
+        <span class="text-danger" asp-validation-for="ColorId"></span>
     </div>
     <div>
-        <label class="mb-3">Plant Sizes:</label><br />
-        <select class="form-select" asp-items="@(new SelectList(ViewBag.Sizes,"Id","Name"))" asp-for="SizeId">
-        </select>
-        <span class="text-danger" asp-validation-for="SKUCode"></span>
+        <label class="mb-3">Plant Size:</label><br />
+        <select class="form-control  border border-info" asp-for="SizeId" asp-items="@(new SelectList(ViewBag.Sizes,"Id","Name"))"></select>
+        <span class="text-danger" asp-validation-for="SizeId"></span>
+
     </div>
-     
+        <div>
+            <label class="mb-3">Plant Categories:</label><br />
+            <select class="form-control  border border-info" asp-for="CategoryIds" asp-items="@(new SelectList(ViewBag.Categories,"Id","Name"))"></select>
+            <span class="text-danger" asp-validation-for="CategoryIds"></span>
+        </div>
     <div>
         <label class="mb-3">Plant Shipping:</label><br />
-        <input asp-for="Shipping" class="form-control border border-info" /><br />
+        <input asp-for="Shipping" class="form-control  border border-info" /><br />
         <span class="text-danger" asp-validation-for="Shipping"></span>
     </div>
     <div>
-        <label class="mb-3">Plant Guarantee :</label><br />
-        <input asp-for="Guarantee" class="form-control border border-info" accept="image/*" /><br />
+        <label class="mb-3">Plant Request:</label><br />
+        <input asp-for="Request" class="form-control  border border-info" accept="image/*" /><br />
+        <span class="text-danger" asp-validation-for="Request"></span>
+    </div>
+    <div>
+        <label class="mb-3">Plant Guarantee:</label><br />
+        <input asp-for="Guarantee" class="form-control  border border-info" accept="image/*" /><br />
         <span class="text-danger" asp-validation-for="Guarantee"></span>
     </div>
-     <div>
-        <label class="mb-3">Plant MainImage :</label><br />
-        <input asp-for="MainImage" class="form-control border border-info" accept="image/*" /><br />
+    <div>
+        <label class="mb-3">Plant main image:</label><br />
+        <input asp-for="MainImage" class="form-control  border border-info" accept="image/*" /><br />
         <span class="text-danger" asp-validation-for="MainImage"></span>
     </div>
-     <div>
-        <label class="mb-3">Plant AnotherImage :</label><br />
-        <input asp-for="AnotherImage" class="form-control border border-info" accept="image/*" /><br />
+    <div>
+        <label class="mb-3">Plant another images:</label><br />
+        <input asp-for="AnotherImage" class="form-control  border border-info" accept="image/*" /><br />
         <span class="text-danger" asp-validation-for="AnotherImage"></span>
     </div>
 
     <div class="mt-3">
-        <button type="submit" class="btn btn-primary">Create Plant</button>
+        <button type="submit" class="btn btn-primary">Create plant</button>
     </div>
 </form>
 
