Aded View Component Layout Services

--- a/Ap204_Pronia/Areas/ProniaAdmin/Views/Plant/Detail.cshtml
+++ b/Ap204_Pronia/Areas/ProniaAdmin/Views/Plant/Detail.cshtml
@@ -41,7 +41,7 @@
                 </div>
             </td>
             <td>
-               <img style=" width:150px; height:90px;" src="~/assets/images/website-images/@Model.PlantImages.FirstOrDefault(i=>i.IsMain==true).ImagePath"/>
+               <img style=" width:150px; height:90px;" src="~/assets/images/website-images/@Model.PlantImages.FirstOrDefault(i=>i.IsMain==true)?.ImagePath"/>
             </td>
         </tr>
     </tbody>
