--- a/Ap204_Pronia/Views/Shared/_Layout.cshtml
+++ b/Ap204_Pronia/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html lang="zxx">
 <head>
     <meta charset="UTF-8" />
@@ -11,7 +13,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon"
           type="image/x-icon"
-          href="~/assets/images/favicon.ico" />
+          href="~/assets/images/favicon.ico"/>
 
     <!-- CSS
     ============================================ -->
@@ -101,7 +103,8 @@
                                 </div>
 
                                 <a href="index.html" class="header-logo">
-                                    <img src="~/assets/images/logo/dark.png" alt="Header Logo" />
+@*                                    <img src="~/assets/images/logo/@layoutService.GetDatas().Result.HeaderLogo alt="Header Logo" />
+*@
                                 </a>
 
                                 <div class="header-right">
@@ -899,158 +902,7 @@
         <!-- Begin Footer Area -->
         <div class="footer-area"
              data-bg-image="assets/images/footer/bg/1-1920x465.jpg">
-            <div class="footer-top section-space-top-100 pb-60">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <div class="footer-widget-item">
-                                <div class="footer-widget-logo">
-                                    <a href="index.html">
-                                        <img src="~/assets/images/logo/dark.png" alt="Logo" />
-                                    </a>
-                                </div>
-                                <p class="footer-widget-desc">
-                                    Lorem ipsum dolor sit amet, consec adipisl elit, sed do
-                                    eiusmod tempor
-                                    <br />
-                                    incidio ut labore et dolore magna.
-                                </p>
-                                <div class="social-link with-border">
-                                    <ul>
-                                        <li>
-                                            <a href="#"
-                                               data-tippy="Facebook"
-                                               data-tippy-inertia="true"
-                                               data-tippy-animation="shift-away"
-                                               data-tippy-delay="50"
-                                               data-tippy-arrow="true"
-                                               data-tippy-theme="sharpborder">
-                                                <i class="fa fa-facebook"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#"
-                                               data-tippy="Twitter"
-                                               data-tippy-inertia="true"
-                                               data-tippy-animation="shift-away"
-                                               data-tippy-delay="50"
-                                               data-tippy-arrow="true"
-                                               data-tippy-theme="sharpborder">
-                                                <i class="fa fa-twitter"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#"
-                                               data-tippy="Pinterest"
-                                               data-tippy-inertia="true"
-                                               data-tippy-animation="shift-away"
-                                               data-tippy-delay="50"
-                                               data-tippy-arrow="true"
-                                               data-tippy-theme="sharpborder">
-                                                <i class="fa fa-pinterest"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#"
-                                               data-tippy="Dribbble"
-                                               data-tippy-inertia="true"
-                                               data-tippy-animation="shift-away"
-                                               data-tippy-delay="50"
-                                               data-tippy-arrow="true"
-                                               data-tippy-theme="sharpborder">
-                                                <i class="fa fa-dribbble"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-md-4 pt-40">
-                            <div class="footer-widget-item">
-                                <h3 class="footer-widget-title">Useful Links</h3>
-                                <ul class="footer-widget-list-item">
-                                    <li>
-                                        <a href="#">About Pronia</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">How to shop</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">FAQ</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Contact us</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Log in</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-md-4 pt-40">
-                            <div class="footer-widget-item">
-                                <h3 class="footer-widget-title">My Account</h3>
-                                <ul class="footer-widget-list-item">
-                                    <li>
-                                        <a href="#">Sign In</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">View Cart</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">My Wishlist</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Track My Order</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Help</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-md-4 pt-40">
-                            <div class="footer-widget-item">
-                                <h3 class="footer-widget-title">Our Service</h3>
-                                <ul class="footer-widget-list-item">
-                                    <li>
-                                        <a href="#">Payment Methods</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Money Guarantee!</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Returns</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Shipping</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Privacy Policy</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 pt-40">
-                            <div class="footer-contact-info">
-                                <h3 class="footer-widget-title">Got Question? Call Us</h3>
-                                <a class="number" href="tel://123-456-789">123 456 789</a>
-                                <div class="address">
-                                    <ul>
-                                        <li>Your Address Goes Here</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="payment-method">
-                                <a href="#">
-                                    <img src="~/assets/images/website-images/1.png"
-                                         alt="Payment Method" />
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          @await Component.InvokeAsync("Footer");
             <div class="footer-bottom">
                 <div class="container">
                     <div class="row">
