--- a/Ap204_Pronia/Views/_ViewImports.cshtml
+++ b/Ap204_Pronia/Views/_ViewImports.cshtml
@@ -1,4 +1,8 @@
 ﻿@using Ap204_Pronia
 @using Ap204_Pronia.Models
 @using Ap204_Pronia.ViewModels
+@inject Ap204_Pronia.Services.LayoutService layoutService   
+@using Ap204_Pronia.Services
+
+
 
