--- a/Ap204_Pronia/Views/Shared/_Layout.cshtml
+++ b/Ap204_Pronia/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zxx">
 <head>
     <meta charset="UTF-8" />
@@ -13,7 +11,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon"
           type="image/x-icon"
-          href="~/assets/images/favicon.ico"/>
+          href="~/assets/images/favicon.ico" />
 
     <!-- CSS
     ============================================ -->
@@ -103,8 +101,8 @@
                                 </div>
 
                                 <a href="index.html" class="header-logo">
-@*                                    <img src="~/assets/images/logo/@layoutService.GetDatas().Result.HeaderLogo alt="Header Logo" />
-*@
+                                    <img src="~/assets/images/logo/@layoutService.GetDatas().Result.FirstOrDefault(s=>s.Key== "HeaderLogo").Value" alt="Header Logo" />
+
                                 </a>
 
                                 <div class="header-right">
@@ -114,7 +112,7 @@
                                                class="search-btn bt"
                                                data-bs-toggle="modal"
                                                data-bs-target="#exampleModal">
-                                                <i class="pe-7s-search"></i>
+                                                <i class="@layoutService.GetDatas().Result.FirstOrDefault(s=>s.Key=="Search").Value"></i>
                                             </a>
                                         </li>
                                         <li class="dropdown d-none d-lg-block">
@@ -124,7 +122,7 @@
                                                     data-bs-toggle="dropdown"
                                                     aria-label="setting"
                                                     aria-expanded="false">
-                                                <i class="pe-7s-users"></i>
+                                                <i class="@layoutService.GetDatas().Result.FirstOrDefault(s=>s.Key=="User").Value"></i>
                                             </button>
                                             <ul class="dropdown-menu"
                                                 aria-labelledby="settingButton">
@@ -138,13 +136,13 @@
                                         </li>
                                         <li class="d-none d-lg-block">
                                             <a href="wishlist.html">
-                                                <i class="pe-7s-like"></i>
+                                                <i class="@layoutService.GetDatas().Result.FirstOrDefault(s=>s.Key=="Basket").Value"></i>
                                             </a>
                                         </li>
                                         <li class="minicart-wrap me-3 me-lg-0">
                                             <a href="#miniCart" class="minicart-btn toolbar-btn">
-                                                <i class="pe-7s-shopbag"></i>
-                                                <span class="quantity">3</span>
+                                                <i class="@layoutService.GetDatas().Result.FirstOrDefault(s=>s.Key=="Wish").Value"></i>
+                                                <span class="quantity">@layoutService.GetBasket()?.Count</span>
                                             </a>
                                         </li>
                                         <li class="mobile-menu_wrap d-block d-lg-none">
@@ -815,78 +813,45 @@
                                    data-tippy-theme="sharpborder"></i>
                             </a>
                         </div>
+                      
+                           
+                       
+                    
+                        
+                                <ul class="minicart-list">
+                                    <li class="minicart-product">
+                                        <a class="product-item_remove">
+                                            <i class="pe-7s-close"
+                                       data-tippy="Remove"
+                                       data-tippy-inertia="true"
+                                       data-tippy-animation="shift-away"
+                                       data-tippy-delay="50"
+                                       data-tippy-arrow="true"
+                                       data-tippy-theme="sharpborder"></i>
+                                        </a>
+                                        <a href="single-product-variable.html"
+                                   class="product-item_img">
+                                            <img class="img-full"
+                                         src="~/assets/images/website-images/@layoutService.GetDatas().Result.FirstOrDefault(s=>s.Key=="Image").Value"
+                                         alt="Product Image" />
+                                        </a>
+                                        <div class="product-item_content">
+                                            <a class="product-item_title"
+                                       href="single-product-variable.html"></a>
+                                            <span class="product-item_quantity">@layoutService.GetDatas().Result.FirstOrDefault(s=>s.Key=="Name").Value</span>
+                                        </div>
+                                    </li>
+
+                                </ul>
+                                
+                                
+                                                 
                         <ul class="minicart-list">
-                            <li class="minicart-product">
-                                <a class="product-item_remove" href="#">
-                                    <i class="pe-7s-close"
-                                       data-tippy="Remove"
-                                       data-tippy-inertia="true"
-                                       data-tippy-animation="shift-away"
-                                       data-tippy-delay="50"
-                                       data-tippy-arrow="true"
-                                       data-tippy-theme="sharpborder"></i>
-                                </a>
-                                <a href="single-product-variable.html"
-                                   class="product-item_img">
-                                    <img class="img-full"
-                                         src="~/assets/images/product/small-size/2-1-70x78.png"
-                                         alt="Product Image" />
-                                </a>
-                                <div class="product-item_content">
-                                    <a class="product-item_title"
-                                       href="single-product-variable.html">American Marigold</a>
-                                    <span class="product-item_quantity">1 x $23.45</span>
-                                </div>
-                            </li>
-                            <li class="minicart-product">
-                                <a class="product-item_remove" href="#">
-                                    <i class="pe-7s-close"
-                                       data-tippy="Remove"
-                                       data-tippy-inertia="true"
-                                       data-tippy-animation="shift-away"
-                                       data-tippy-delay="50"
-                                       data-tippy-arrow="true"
-                                       data-tippy-theme="sharpborder"></i>
-                                </a>
-                                <a href="single-product-variable.html"
-                                   class="product-item_img">
-                                    <img class="img-full"
-                                         src="~/assets/images/product/small-size/2-2-70x78.png"
-                                         alt="Product Image" />
-                                </a>
-                                <div class="product-item_content">
-                                    <a class="product-item_title"
-                                       href="single-product-variable.html">Black Eyed Susan</a>
-                                    <span class="product-item_quantity">1 x $25.45</span>
-                                </div>
-                            </li>
-                            <li class="minicart-product">
-                                <a class="product-item_remove" href="#">
-                                    <i class="pe-7s-close"
-                                       data-tippy="Remove"
-                                       data-tippy-inertia="true"
-                                       data-tippy-animation="shift-away"
-                                       data-tippy-delay="50"
-                                       data-tippy-arrow="true"
-                                       data-tippy-theme="sharpborder"></i>
-                                </a>
-                                <a href="single-product-variable.html"
-                                   class="product-item_img">
-                                    <img class="img-full"
-                                         src="~/assets/images/product/small-size/2-3-70x78.png"
-                                         alt="Product Image" />
-                                </a>
-                                <div class="product-item_content">
-                                    <a class="product-item_title"
-                                       href="single-product-variable.html">Bleeding Heart</a>
-                                    <span class="product-item_quantity">1 x $30.45</span>
-                                </div>
-                            </li>
                         </ul>
                     </div>
                     <div class="minicart-item_total">
-                        <span>Subtotal</span>
-                        <span class="ammount">$79.35</span>
+                        <span>@layoutService.GetBasket()?.Count</span>
+                        <span class="ammount">$ @layoutService.GetBasket()?.TotalPrice</span>
                     </div>
                     <div class="group-btn_wrap d-grid gap-2">
                         <a href="cart.html" class="btn btn-dark">View Cart</a>
@@ -902,7 +867,7 @@
         <!-- Begin Footer Area -->
         <div class="footer-area"
              data-bg-image="assets/images/footer/bg/1-1920x465.jpg">
-          @await Component.InvokeAsync("Footer");
+            @await Component.InvokeAsync("Footer");
             <div class="footer-bottom">
                 <div class="container">
                     <div class="row">
@@ -1035,7 +1000,7 @@
                                             </div>
                                         </li>
                                         <li class="add-to-cart">
-                                            <a class="btn btn-custom-size lg-size btn-pronia-primary"
+                                            <a  class="btn btn-custom-size lg-size btn-pronia-primary"
                                                href="cart.html">Add to cart</a>
                                         </li>
                                         <li class="wishlist-btn-wrap">
