--- a/Ap204_Pronia/Views/_ViewImports.cshtml
+++ b/Ap204_Pronia/Views/_ViewImports.cshtml
@@ -4,5 +4,8 @@
 @inject Ap204_Pronia.Services.LayoutService layoutService   
 @using Ap204_Pronia.Services
 
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AuthoringTagHelpers
+
 
 
