--- a/Ap204_Pronia/Views/Home/Index.cshtml
+++ b/Ap204_Pronia/Views/Home/Index.cshtml
@@ -177,7 +177,7 @@
                                                 <li class="quuickview-btn"
                                                     data-bs-toggle="modal"
                                                     data-bs-target="#quickModal">
-                                                    <a href="#"
+                                                    <a  href="#"
                                                        data-tippy="Quickview"
                                                        data-tippy-inertia="true"
                                                        data-tippy-animation="shift-away"
@@ -188,7 +188,7 @@
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="cart.html"
+                                                    <a asp-controller="plant" asp-action="addbasket" asp-route-id="@plant.Id"
                                                        data-tippy="Add to cart"
                                                        data-tippy-inertia="true"
                                                        data-tippy-animation="shift-away"
@@ -202,7 +202,7 @@
                                         </div>
                                     </div>
                                     <div class="product-content">
-                                        <a class="product-name" href="shop.html">@plant.Name</a>
+                                        <a  class="product-name" href="shop.html">@plant.Name</a>
                                         <div class="price-box pb-1">
                                             <span class="new-price">$@plant.Price</span>
                                         </div>
@@ -265,7 +265,7 @@
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="cart.html"
+                                                    <a  href="cart.html"
                                                        data-tippy="Add to cart"
                                                        data-tippy-inertia="true"
                                                        data-tippy-animation="shift-away"
