--- a/Ap204_Pronia/Views/Shared/_Layout.cshtml
+++ b/Ap204_Pronia/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    BasketVM basket = await layoutService.GetBasket();
+}
+<!DOCTYPE html>
 <html lang="zxx">
 <head>
     <meta charset="UTF-8" />
@@ -142,7 +145,7 @@
                                         <li class="minicart-wrap me-3 me-lg-0">
                                             <a href="#miniCart" class="minicart-btn toolbar-btn">
                                                 <i class="@layoutService.GetDatas().Result.FirstOrDefault(s=>s.Key=="Wish").Value"></i>
-                                                <span class="quantity">@layoutService.GetBasket()?.Count</span>
+                                                <span class="quantity">@layoutService.GetBasket().Result?.Count</span>
                                             </a>
                                         </li>
                                         <li class="mobile-menu_wrap d-block d-lg-none">
@@ -177,13 +180,13 @@
                                             </ul>
                                         </li>
                                         <li class="megamenu-holder">
-                                            <a href="shop.html">Shop</a>
+                                            <a asp-controller="Plant" asp-action="Index">Shop</a>
                                             <ul class="drop-menu megamenu">
                                                 <li>
                                                     <span class="title">Shop Layout</span>
                                                     <ul>
                                                         <li>
-                                                            <a href="shop.html">Shop Default</a>
+                                                            <a>Shop Default</a>
                                                         </li>
                                                         <li>
                                                             <a href="shop-grid-fullwidth.html">Shop Grid Fullwidth</a>
@@ -811,17 +814,26 @@
                                    data-tippy-delay="50"
                                    data-tippy-arrow="true"
                                    data-tippy-theme="sharpborder"></i>
+
                             </a>
+
+
                         </div>
-                      
-                           
-                       
-                    
-                        
-                                <ul class="minicart-list">
+
+
+
+
+
+                        <ul class="minicart-list">
+
+
+                            @if (basket != null)
+                            {
+                                @foreach (BasketItemVM item in basket?.BasketItemVMs)
+                                {
                                     <li class="minicart-product">
-                                        <a class="product-item_remove">
-                                            <i class="pe-7s-close"
+                                        <a class="product-item_remove" asp-controller="Plant" asp-action="DeleteBasket" >
+                                            <i class="pe-7s-close closebtn "
                                        data-tippy="Remove"
                                        data-tippy-inertia="true"
                                        data-tippy-animation="shift-away"
@@ -832,26 +844,60 @@
                                         <a href="single-product-variable.html"
                                    class="product-item_img">
                                             <img class="img-full"
-                                         src="~/assets/images/website-images/@layoutService.GetDatas().Result.FirstOrDefault(s=>s.Key=="Image").Value"
+                                         src="~/assets/images/website-images/@item.Plant.PlantImages?.FirstOrDefault(p=>p.IsMain==true)?.ImagePath"
                                          alt="Product Image" />
                                         </a>
                                         <div class="product-item_content">
                                             <a class="product-item_title"
                                        href="single-product-variable.html"></a>
-                                            <span class="product-item_quantity">@layoutService.GetDatas().Result.FirstOrDefault(s=>s.Key=="Name").Value</span>
+                                            <span class="product-item_quantity">@item.Plant?.Name</span>
+                                            <span class="product-item_quantity">@item.Count</span>
                                         </div>
                                     </li>
+                                }
+                            }
+                            else
+                            {
+                                <li class="minicart-product">
+                                    There is no Product in the Basket
+                                </li>
+                            }
 
-                                </ul>
-                                
-                                
-                                                 
+
+                        </ul>
+
+
+
                         <ul class="minicart-list">
                         </ul>
                     </div>
                     <div class="minicart-item_total">
-                        <span>@layoutService.GetBasket()?.Count</span>
-                        <span class="ammount">$ @layoutService.GetBasket()?.TotalPrice</span>
+                        @if (basket != null)
+                        {
+                            <span>@basket.Count</span>
+
+                            <span class="ammount">$@basket.TotalPrice</span>
+                        }
+                        else
+                        {
+                            <span>$0</span>
+                        }
+
+                        @section Scripts{
+                        <script>
+
+
+                            $(".closebtn").click(function(){
+
+                                console.log("aa")
+                                //this.parentNode.remove();
+
+                            })
+
+
+
+                        </script>
+                        }
                     </div>
                     <div class="group-btn_wrap d-grid gap-2">
                         <a href="cart.html" class="btn btn-dark">View Cart</a>
@@ -1000,7 +1046,7 @@
                                             </div>
                                         </li>
                                         <li class="add-to-cart">
-                                            <a  class="btn btn-custom-size lg-size btn-pronia-primary"
+                                            <a class="btn btn-custom-size lg-size btn-pronia-primary"
                                                href="cart.html">Add to cart</a>
                                         </li>
                                         <li class="wishlist-btn-wrap">
@@ -1088,5 +1134,7 @@
 
     <!--Main JS (Common Activation Codes)-->
     <script src="~/assets/js/main.js"></script>
+    @RenderSection("Scripts",required:false)
+
 </body>
 </html>
