Admin panel created register and login

--- a/Ap204_Pronia/Areas/ProniaAdmin/Views/Shared/_Layout.cshtml
+++ b/Ap204_Pronia/Areas/ProniaAdmin/Views/Shared/_Layout.cshtml
@@ -162,17 +162,34 @@
                     <li class="nav-item nav-profile dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="profileDropdown">
                             <img src="~/admin/images/faces/face5.jpg" alt="profile" />
-                            <span class="nav-profile-name">Louis Barnett</span>
+                            <span class="nav-profile-name">@User.Identity.Name</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                            <a class="dropdown-item">
-                                <i class="mdi mdi-settings text-primary"></i>
-                                Settings
-                            </a>
-                            <a class="dropdown-item">
-                                <i class="mdi mdi-logout text-primary"></i>
-                                Logout
-                            </a>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+
+                                <a class="dropdown-item">
+                                    <i class="mdi mdi-settings text-primary"></i>
+                                    Edit
+                                </a>
+                                <a class="dropdown-item" asp-controller="account" asp-action="logout">
+                                    <i class="mdi mdi-logout text-primary"></i>
+                                    Logout
+                                </a>
+                            }
+                            else
+                            {
+                                <a class="dropdown-item" asp-controller="account" asp-action="register">
+                                    <i class="mdi mdi-logout text-primary"></i>
+                                    Register
+                                </a>
+                                <a class="dropdown-item" asp-controller="account" asp-action="login">
+                                    <i class="mdi mdi-logout text-primary"></i>
+                                    Login
+                                </a>
+                            }
+
+
                         </div>
                     </li>
                 </ul>
