Admin Panel aded edit register

--- a/Ap204_Pronia/Areas/ProniaAdmin/Views/Shared/_Layout.cshtml
+++ b/Ap204_Pronia/Areas/ProniaAdmin/Views/Shared/_Layout.cshtml
@@ -168,7 +168,7 @@
                             @if (User.Identity.IsAuthenticated)
                             {
 
-                                <a class="dropdown-item">
+                                <a class="dropdown-item" asp-controller="account" asp-action="Edit">
                                     <i class="mdi mdi-settings text-primary"></i>
                                     Edit
                                 </a>
