--- a/Ap204_Pronia/Views/Account/Login.cshtml
+++ b/Ap204_Pronia/Views/Account/Login.cshtml
@@ -11,12 +11,12 @@
             <div class="row h-100">
                 <div class="col-lg-12">
                     <div class="breadcrumb-item">
-                        <h2 class="breadcrumb-heading">Register Page</h2>
+                        <h2 class="breadcrumb-heading">Login Page</h2>
                         <ul>
                             <li>
                                 <a href="index.html">Home</a>
                             </li>
-                            <li>Register</li>
+                            <li>Login</li>
                         </ul>
                     </div>
                 </div>
